--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -69,6 +69,7 @@
   </div>
 </section>
 
+
 <!-- Image Showcases -->
 <section class="showcase">
   <div class="container-fluid p-0">
@@ -83,7 +84,7 @@
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 text-white showcase-img" style="background-image: url('./images/bg-showcase-2.jpg');"></div>
+      <div class="col-lg-6 text-white showcase-img" style="background-image: url('./images/bg-showcase-3.jpg');"></div>
       <div class="col-lg-6 my-auto showcase-text">
         <h2>Day Two</h2>
         <p class="lead mb-0">
@@ -92,7 +93,7 @@
       </div>
     </div>
     <div class="row no-gutters">
-      <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('./images/bg-showcase-3.jpg');"></div>
+      <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('./images/bg-showcase-2.jpg');"></div>
       <div class="col-lg-6 order-lg-1 my-auto showcase-text">
         <h2>The Hackathon</h2>
         <p class="lead mb-0">
@@ -158,6 +159,44 @@
             </div>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Sponsors -->
+<section class="sponsors-icons text-center bg-light">
+  <div class="container">
+    <h2 class="mb-5">Thank you to our Sponsors</h2>
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="./images/sponsor1.png" alt="">
+          <h5>Big Pharma</h5>
+          <!-- <p class="font-weight-light mb-0">"Holy shit, are my bags heavy!"</p> -->
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="./images/sponsor0.png" alt="">
+          <h5>Monsanto</h5>
+          <!-- <p class="font-weight-light mb-0">"Holy shit, are my bags heavy!"</p> -->
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="./images/sponsor2.png" alt="">
+          <h5>Legacy Banking</h5>
+          <!-- <p class="font-weight-light mb-0"> "I'm a certified nocoiner!"</p> -->
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="./images/sponsor3.png" alt="">
+          <h5>The Alt. Right</h5>
+          <!-- <p class="font-weight-light mb-0">"I wonder if there's food in the green room."</p> -->
+        </div>
       </div>
     </div>
   </div>
